# lib_base

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
benchmarks/: CMakeLists.txt  StrcmpBenchmark.cpp  StringConverterBenchmark.cpp  StrlenBenchmark.cpp  StrstrBenchmark.cpp
benchmarks/tools/: BenchmarkHelper.h
cmake/: MasmBuildHelpers.cmake  Util_ExportConfig.cmake  Util_FindFFmpeg.cmake  Util_FindGSL.cmake  Util_FindLibPngJpeg.cmake  Util_FindOpenAL.cmake  Util_FindOpenGL.cmake  Util_FindOpenH264.cmake  Util_FindOpus.cmake  Util_FindQt.cmake  Util_FindZlib.cmake  Util_InstallConfig.cmake  Util_InstallRules.cmake  Util_QtSourcesAdd.cmake  lib_base-config.cmake.in  lib_baseConfig.cmake  lib_baseConfig.cmake.in  x86_SImd.cmake
doc/: page_style.css  threads_style.css
documentation/: dark_theme_page_style.css  page.html  prev.css  threads.html
include/base/: Assert.h  AutoRunUtils.h  Base.h  CompilerDetection.h  Concurrent.h  Config.h  Flags.h  OverflowCheck.h  Platform.h  ProcessorDetection.h  SimdHelpers.h  SystemDetection.h  Time.h  TypeTraits.h  TypeWrapper.h  Types.h  Utility.h  Windows.h
resources/fonts/: fonts.qrc
src/: AutoRunUtils.cpp  AutoRunUtils.h  InvokeQueued.h  ProcessorDetection.h  Time.cpp  Time.h
src/core/: Atomic.cpp  AtomicInteger.cpp  Mutex.cpp  MutexLocker.cpp  Thread.cpp  ThreadsData.cpp  ThreadsData.h  UnixMutex.cpp  UnixThread.cpp  WindowsMutex.cpp  WindowsRegistry.cpp  WindowsThread.cpp
src/images/: CMakeLists.txt  ImageReader.cpp  ImagesBlur.cpp  ImagesBoxBlur.cpp  ImagesBuffer.cpp  ImagesGaussianBlur.cpp  ImagesImage.cpp  ImagesIntegral.cpp  ImagesIntegralHelpers.cpp  ImagesIntegralHelpers.h  ImagesPrepare.cpp  ImagesQtUtility.cpp  ImagesRgbBlur.cpp  ImagesSimdSupport.h  ImagesStackBlur.cpp  ImagesUtility.cpp  StackBlurTask.h  StbImage.c
src/images/filters/: ImageFilter.cpp
src/images/formats/: BmpHandler.cpp  JpegHandler.cpp  PngHandler.cpp
src/images/gl/: ImagesGLImage.cpp
src/io/: ArrayData.cpp  ByteArray.cpp  ByteArrayMatcher.cpp  Compressor.cpp  File.cpp  FileInfo.cpp  FileSystemPath.cpp  UnixFileEngine.cpp  WindowsFileEngine.cpp  WindowsFileInfo.cpp  WindowsFileSystemPath.cpp  WindowsSmartHandle.cpp
src/media/: Manager.cpp  MediaCommon.cpp  Utility.cpp  Utility.h
src/media/ffmpeg/: CMakeLists.txt  Utility.cpp
src/media/ffmpeg/audio/: AbstractAudioFFmpegReader.cpp  AbstractAudioLoader.cpp  AbstractAudioReader.cpp  AudioReader.cpp
src/media/ffmpeg/video/: Chroma.cpp  ColorSpace.cpp  Filter.cpp  Fourcc.cpp  FrameGenerator.cpp  HardwareAcceleration.cpp  Object.cpp  Picture.cpp  Scale.cpp  SubPicture.cpp  ThumbnailGenerator.cpp  Variables.cpp  VideoFormat.cpp
src/qt/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lib_base_qt.vcxproj  lib_base_qt.vcxproj.filters
src/qt/common/: BasicClickHandlers.cpp  ClickHandler.cpp  MainQueueProcessor.cpp  Timer.cpp
src/qt/css/: ScrollAreaStyle.css  SliderStyle.css
src/qt/images/: ImagesBlur.cpp  ImagesBuffer.cpp  ImagesPrepare.cpp  StackBlurTask.h
src/qt/lib_base_qt_autogen/: mocs_compilation_Debug.cpp
src/qt/lib_base_qt_autogen/QL2ALYVIGC/: qrc_fonts.cpp
src/qt/lib_base_qt_autogen/include_Debug/KEAZDSG5HG/: moc_BlurBehind.cpp  moc_BlurBehind.cpp.d
src/qt/lib_base_qt_autogen/include_Debug/T6EJQAB3QT/: moc_BaseWidget.cpp  moc_BaseWidget.cpp.d  moc_ContinuousScroll.cpp  moc_ContinuousScroll.cpp.d  moc_EnhancedSlider.cpp  moc_EnhancedSlider.cpp.d  moc_ScrollArea.cpp  moc_ScrollArea.cpp.d
src/qt/lib_base_qt_autogen/include_Debug/ZDND33SZJB/: moc_WidgetsHider.cpp  moc_WidgetsHider.cpp.d
src/qt/resources/: css.qrc  images.qrc
src/qt/style/: BaseStyleParameters.h  StyleCore.cpp  StyleFont.cpp  StyleParameters.h  StyleScale.cpp  StyleWidgets.cpp  TextWidgetStyleParameters.h  TitleWidgetStyleParameters.h
src/qt/text/: BlockParser.cpp  BlockParser.h  String.cpp  TextBidiAlgorithm.h  TextBlock.cpp  TextBlock.h  TextClickHandlers.cpp  TextDrawUtility.cpp  TextDrawUtility.h  TextEntities.cpp  TextEntities.h  TextRenderer.cpp  TextRenderer.h  TextStackEngine.cpp  TextStackEngine.h  TextUtility.cpp  TextUtility.h  TextWord.cpp  TextWord.h  Types.h  WordParser.cpp  WordParser.h
src/qt/ui/: AbstractFlatButton.cpp  ContinuousScroll.cpp  EnhancedSlider.cpp  FlatButton.cpp  FlatLabel.cpp  PopupMenu.cpp  ScrollArea.cpp  Separator.cpp
src/qt/ui/animations/: Animation.cpp  AnimationBase.cpp  AnimationManager.cpp  CombinedGrowthAnimation.cpp  HorizontalGrowthAnimation.cpp  OpacityAnimation.cpp  VerticalGrowthAnimation.cpp
src/qt/ui/effects/: Blur.cpp  BlurBehind.cpp  OpenGLBlur.cpp
src/qt/widgets/: AbstractFlatButton.cpp  ContinuousScroll.cpp  EnhancedSlider.cpp  FlatButton.cpp  FlatLabel.cpp  PopupMenu.cpp  ScrollArea.cpp  Separator.cpp
src/string/: Char.cpp  Latin1StringMatcher.cpp  String.cpp  StringBuilder.cpp  StringConverter.cpp  StringMatcher.cpp  StringView.cpp  UnicodeTable.cpp
src/system/: File.cpp  FileSystemPath.cpp  SystemInfo.cpp  SystemTools.cpp  UnixFileEngine.cpp  (+6 more)
tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BaseMemcpyTest.cpp  BaseNetworkInformationTest.cpp  BaseQtTest.cpp  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  StringConverterTest.cpp  StringTest.cpp  VectorTest.cpp  cmake_install.cmake  lib_baseTests.sln  lib_base_test.vcxproj  lib_base_test.vcxproj.filters  test.cpp
tests/core/: BaseMemcpyTest.cpp  BaseNetworkInformationTest.cpp  CMakeLists.txt  StrcmpTest.cpp  StringConverterTest.cpp  StringTest.cpp  StringViewTest.cpp  StrlenTest.cpp  StrstrTest.cpp  VectorTest.cpp
tests/qt/: CMakeLists.txt
(+833 files in other folders)
